--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -1,11 +1,14 @@
 body {
-    font-family: Roboto;
+    font-family: 'Roboto';
     color: #373867;
 }
 
 aside {
-    display: inline-block;
-    width: 20%;
+    position: fixed;
+    width: 240px;
+    height: 900px;
+    padding: 30px;
+    background-color: #AACE9B;
 }
 
 header {
@@ -16,16 +19,23 @@ header {
 
 header div {
     display: inline-block;
-    width: 86%
+    width: 85%
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
 }
 
 h1 span {
     display: block;
+}
+
+h2 {
+    display: inline-block;
+    border-bottom: 2px solid #FF3E1D;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 #header-icons {
@@ -47,7 +57,7 @@ h1 span {
 
 #main-container {
     display: inline-block;
-    width: 79%;
+    padding: 0px 15px 0px 335px;
 }
 
 #main-title {
