--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -41,6 +41,12 @@ header div {
     width: 85%
 }
 
+section {
+    margin-top: 35px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #37386770;
+}
+
 h1 {
     font-size: 40px;
     font-weight: bold;
@@ -61,6 +67,15 @@ h3 {
     margin-bottom: 10px;
     font-size: 14px;
     font-weight: bold;
+}
+
+article {
+    display: inline-block;
+    width: 49%;
+    box-sizing: border-box;
+    margin-top: 25px;
+    padding-right: 65px;
+    font-size: 14px;
 }
 
 #aside-contact {
@@ -85,6 +100,7 @@ h3 {
 
 #aside-contact-info p {
     display: inline;
+    font-weight: normal;
 }
 
 #aside-contact-info div {
@@ -153,7 +169,7 @@ h3 {
 }
 
 .button {
-    padding: 10px 35px;
+    padding: 8px 30px;
     background-color: #fff;
     border: 2px solid #FF3E1D;
     border-radius: 5px;
@@ -168,23 +184,8 @@ h3 {
     background-color: #FF3E1D;
 }
 
-#reasons {
-    margin-top: 35px;
-    padding-bottom: 30px;
-    border-bottom: 2px solid #37386770;
-}
-
-#reasons h2 {
+#reasons h2, #features h2 {
     margin-right: 70%;
-}
-
-#reasons article {
-    display: inline-block;
-    width: 49%;
-    box-sizing: border-box;
-    margin-top: 25px;
-    padding-right: 65px;
-    font-size: 14px;
 }
 
 #reasons img {
@@ -197,4 +198,12 @@ h3 {
     padding-left: 20px;
     box-sizing: border-box;
     vertical-align: top;
+}
+
+#features img {
+    width: 474px;
+}
+
+#features h3, #features button {
+    margin: 25px 0px;
 }
