--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -100,6 +100,31 @@ textarea {
     margin-bottom: 15px;
 }
 
+ol {
+    text-align: left;
+    padding-left: 100px;
+}
+
+footer {
+    margin-top: 45px;
+    padding-bottom: 55px;
+    text-align: center;
+}
+
+footer div {
+    display: inline-block;
+    width: 30%;
+}
+
+footer li a {
+    color: #373867;
+    text-decoration: none;
+}
+
+footer li a:hover {
+    color: #171877;
+}
+
 #aside-contact {
     padding-top: 65px;
 }
@@ -159,6 +184,11 @@ textarea {
 
 .social-media-icons a {
     color: #5D5D5D;
+    text-decoration: none;
+}
+
+.social-media-icons a:hover {
+    color: #FF3E1D;
     text-decoration: none;
 }
 
@@ -304,4 +334,12 @@ textarea {
 
 #our-history {
     padding-bottom: 45px;
+}
+
+#footer-icons {
+    display: block;
+    width: initial;
+    padding-top: 24px;
+    margin: 30px 0px;
+    border-top: 2px solid #37386770;
 }
