--- a/Semana-03/css/style.css
+++ b/Semana-03/css/style.css
@@ -42,28 +42,22 @@ h1 {
     font-weight: bold;
 }
 
-/* h1 span {
-    display: block;
-} */
 h2 {
-    display: inline-block;
     border-bottom: 2px solid #FF3E1D;
     font-size: 30px;
     font-weight: bold;
 }
 
 h3 {
-    margin-bottom: 10px;
+    margin: 10px 0px;
     font-size: 14px;
     font-weight: bold;
 }
 
 article {
-    display: inline-block;
-    box-sizing: border-box;
-    width: 49%;
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 25px;
-    padding-right: 65px;
     font-size: 14px;
 }
 
