--- a/Semana-03/css/style.css
+++ b/Semana-03/css/style.css
@@ -32,6 +32,7 @@ nav a {
 }
 
 section {
+    flex: auto;
     margin-top: 35px;
     padding-bottom: 30px;
     border-bottom: 2px solid #37386770;
@@ -67,7 +68,7 @@ form {
 }
 
 label {
-    display: block;
+    display: none;
 }
 
 input, textarea {
@@ -148,13 +149,11 @@ textarea {
 
 .button {
     margin-top: 20px;
-    flex: auto;
     padding: 8px 30px;
     background-color: #fff;
-    border: 2px solid #FF3E1D;
+    border: 1px solid #FF3E1D;
     border-radius: 5px;
     font-size: 12px;
-    font-weight: 600;
     text-transform: uppercase;
     color: #FF3E1D;
 }
@@ -162,4 +161,9 @@ textarea {
 .button:hover {
     background-color: #FF3E1D;
     color: #373867;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
 }
