--- a/Semana-03/css/header.css
+++ b/Semana-03/css/header.css
@@ -1,16 +1,30 @@
 header {
-    display: flex;
-    justify-content: center;
     width: 100%;
     margin-top: 30px;
-    border-bottom: 2px solid #FF3E1D;
+    border-bottom: 3px solid #FF3E1D;
     font-size: 14px;
 }
 
 header div {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 header .social-media-icons {
-    display: none;
+    display: block;
+    margin-bottom: 30px;
+    text-align: end;
+    font-size: 20px;
+}
+
+.sticky-menu {
+    position: fixed;
+    margin-top: -15px;
+    padding: 15px 20px;
+    background-color: #37386730;
+    border-radius: 5px;
+}
+
+.sticky-menu a {
+    text-decoration: none;
+    color: #FF3E1D;
 }
