BaSP-W03-2022: add media quieries for desktop

--- a/Semana-03/css/main.css
+++ b/Semana-03/css/main.css
@@ -209,3 +209,9 @@ section#our-history img {
         float: right;
     }
 }
+
+@media (min-width: 1024px) {
+    #main-container {
+        width: 72%;
+    }
+}
