--- a/Semana-03/css/sidebar.css
+++ b/Semana-03/css/sidebar.css
@@ -1,6 +1,6 @@
 aside {
     display: none;
-    width: 25%;
+    width: 323px;
     background-color: #AACE9B;
 }
 
@@ -27,7 +27,7 @@ nav a {
     position: fixed;
     top: 0;
     padding: 30px;
-    width: 20%;
+    width: 260px;
 }
 
 p.aside-title {
@@ -45,7 +45,7 @@ p.aside-title {
     margin-bottom: 25px;
 }
 
-#aside-contact p + p {
+#aside-contact p.aside-title + p {
     margin-bottom: 35px;
     font-size: 14px;
     font-weight: 500;
