BaSP-W03-2022: add commments in css

--- a/Semana-03/css/footer.css
+++ b/Semana-03/css/footer.css
@@ -38,6 +38,7 @@ footer p {
     border-top: 2px solid #37386770;
 }
 
+/* Tablet */
 @media (min-width: 481px) {
     footer {
         justify-content: center;
