--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css" />
-    <link rel="stylesheet" type="text/css" href="../css/login.css" />
+    <link rel="stylesheet" type="text/css" href="../css/employee-signup.css" />
     <script src="../javascript/login.js"></script>
     <title>
       Trackgenix - Hours Tracker
@@ -115,23 +115,64 @@
         </div>
       </header>
       <main>
-        <section id="login">
-          <h1>Log In</h1>
+        <section id="employee-signup">
+          <h1>Sign Up</h1>
+          <p>All fields are required.</p>
           <form>
-            <label for="email">Email</label>
-            <input type="text" name="email" id="email" />
-            <label for="pass">Password</label>
-            <input type="password" name="pass" id="pass" />
+            <fieldset>
+              <label for="first-name">First name</label>
+              <input type="text" name="first-name" id="first-name" />
+            </fieldset>
+            <fieldset>
+              <label for="last-name">Last name</label>
+              <input type="text" name="last-name" id="last-name" />
+            </fieldset>
+            <fieldset>
+              <label for="dni">DNI</label>
+              <input type="text" name="dni" id="dni" />
+            </fieldset>
+            <fieldset>
+              <label for="date">Birthdate</label>
+              <input type="date" name="date" id="date" />
+            </fieldset>
+            <fieldset>
+              <label for="phone">Phone</label>
+              <input type="text" name="phone" id="phone" />
+            </fieldset>
+            <fieldset>
+              <label for="address">Address</label>
+              <input type="text" name="address" id="address" />
+            </fieldset>
+            <fieldset>
+              <label for="location">Location</label>
+              <input type="text" name="location" id="location" />
+            </fieldset>
+            <fieldset>
+              <label for="postal">Postal code</label>
+              <input type="text" name="postal" id="postal" />
+            </fieldset>
+            <fieldset>
+              <label for="email">Email</label>
+              <input type="text" name="email" id="email" />
+            </fieldset>
+            <fieldset>
+              <label for="pass">Password</label>
+              <input type="password" name="pass" id="pass" />
+            </fieldset>
+            <fieldset>
+              <label for="pass-repeat">Repeat password</label>
+              <input type="password" name="pass-repeat" id="pass-repeat" />
+            </fieldset>
             <div class="form-actions">
               <ul>
-                <li><a href="#" class="disabled">Forgot password?</a></li>
-                <li><a href="./employee-signup.html">Sign Up</a></li>
+                <li><a href="./login.html">Already have account? Login</a></li>
+                <li><a href="./index.html">Back to Home</a></li>
               </ul>
               <input
                 type="button"
-                value="Login"
-                class="btn-login"
-                id="btn-login"
+                value="Create"
+                class="btn-create"
+                id="btn-create"
               />
             </div>
           </form>
