--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css" />
     <link rel="stylesheet" type="text/css" href="../css/employee-signup.css" />
-    <script src="../javascript/login.js"></script>
+    <script src="../javascript/employee-signup.js"></script>
     <title>
       Trackgenix - Hours Tracker
     </title>
