BaSP-06: sigup validation progress

--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -128,15 +128,15 @@
               <input type="text" name="last-name" id="last-name" />
             </fieldset>
             <fieldset>
-              <label for="dni">DNI</label>
+              <label for="dni">DNI. Must have 8 digits</label>
               <input type="text" name="dni" id="dni" />
             </fieldset>
             <fieldset>
-              <label for="date">Birthdate</label>
+              <label for="date">Birthday</label>
               <input type="date" name="date" id="date" />
             </fieldset>
             <fieldset>
-              <label for="phone">Phone</label>
+              <label for="phone">Phone. Must have 10 digits</label>
               <input type="text" name="phone" id="phone" />
             </fieldset>
             <fieldset>
