BaSP-W06: employee sigup v1 ready

--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -28,7 +28,7 @@
                                 <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="#">Sign Up</a>
+                                <a href="./employee-signup.html">Sign Up</a>
                             </li>
                             <li>
                                 <a href="./login.html">Log In</a>
